fable/test/valid/format_nested.f
      program prog
      write(6, '(2(2x,3(1x,a)))') 'x', 'y', 'z', 'a', 'b', 'c'
      end
