fable/test/syntax_error/bad_and.f
      program prog
      logical a, b, c
      a = b .ad. c
      end
